--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </blockquote>
           </div>
           
-          <div class="testimonial swiper-slide">
+          <!-- <div class="testimonial swiper-slide">
             <blockquote>
               <p>
               <span>&ldquo;</span>
@@ -172,7 +172,7 @@
                 Valeska Fabris
               </cite>
             </blockquote>
-          </div>
+          </div> 
           <div class="testimonial swiper-slide">
             <blockquote>
               <p>
@@ -186,10 +186,11 @@
               </cite>
             </blockquote>
           </div>
-        </div>
-        <!-- If we need pagination -->
+        </div> -->
+        
+        <!-- If we need pagination  -->
        <div class="swiper-pagination"></div>
-      </div>
+      </div> 
     </div>
   </section>
 
